Ingress/ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eks-world-one
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eks-world-one
  template:
    metadata:
      labels:
        app: eks-world-one
    spec:
      containers:
      - name: eks-world-one
        image: apatranobis59/ingress-world:v1
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: eks-world-one
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: eks-world-one
	
	
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: eks-world-two
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eks-world-two
  template:
    metadata:
      labels:
        app: eks-world-two
    spec:
      containers:
        - name: eks-world-two
          image: apatranoibs59/ingress-world:v1
          ports:
            - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: eks-world-two
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: eks-world-two
	
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /hello-world-one(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: eks-world-one
                port:
                  number: 80

          - path: /hello-world-two(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: eks-world-two
                port:
                  number: 80

          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: eks-world-two
                port:
                  number: 80
